namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-gifts-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-gifts-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "ccmbpt-data-and-analysis"
    cloud-platform.justice.gov.uk/application: "Gifts App"
    cloud-platform.justice.gov.uk/owner: "systems and monitoring, ccmbpt, access to justice analytical business partnering, d&a: ccmanalytics_asd@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/gifts-app"
    cloud-platform.justice.gov.uk/team-name: "gifts-app-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
